@@ -11,6 +11,7 @@ Version 3.0.5 (12-13-11)
 -Minor HTML markup tweak.
 -Removed 404 image.
 -Fixed slider caption bug on index page. 
+-Fixed BBPress bug.
 
 Version 3.0.4 (12-09-11)
 -Removed cursor: pointer; from all iMenu css. 
